Fix stretched background on mobile
Also removed background-width property that isn't a CSS property

Fixes https://github.com/cortlandtlabs/cortlandtlabs.github.io/issues/13

--- a/css/main.css
+++ b/css/main.css
@@ -132,8 +132,7 @@ body {
   .secondSegment {
     min-height: 35em;
     background-image: url("../assets/nycwtc.jpg");
-    background-size: cover;
-    background-width: 100%;
+    background-size: 250%;
     background-position: center;
     background-attachment: fixed;
   }
